--- a/add_recipe.html
+++ b/add_recipe.html
@@ -10,65 +10,69 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="header">
-    <div class="logo">
-        <picture>
-            <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
-        </picture>
-        <h1 class="title">Forkfolio</h1>
-    </div>
-</header>
-<nav>
-    <div class="topBar" id="topBar">
-        <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="add_recipe.html">Lägg till recept</a>
-        <a href="index.html" class>Hem</a>
-    </div>
-</nav>
-    <main>
-        <section class="content">
-            <h2>Vilket recept vill du lägga till?</h2>
-            <div class="formContainer">
-                <form>
-                    <div class="formGroup">
-                        <label for="title">Rubrik på ditt recept</label>
-                        <input type="text" id="title" name="title">
+<div class="wrapper">
+    <header class="header">
+        <div class="logo">
+            <picture>
+                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+            </picture>
+            <h1 class="title">Forkfolio</h1>
+        </div>
+    </header>
+    <nav>
+        <div class="topBar" id="topBar">
+            <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="add_recipe.html">Lägg till recept</a>
+            <a href="index.html" class>Hem</a>
+        </div>
+    </nav>
+    <div class="mainContent">
+        <main>
+            <section class="content">
+                <h2>Vilket recept vill du lägga till?</h2>
+                <div class="formContainer">
+                    <form>
+                        <div class="formGroup">
+                            <label for="title">Rubrik på ditt recept</label>
+                            <input type="text" id="title" name="title">
+                        </div>
+                        <div class="formGroup">
+                            <label for="ingredients">Ingredienser</label>
+                            <textarea id="ingredients" name="ingredients" style="height:100px"></textarea>
+                        </div>
+                        <div class="formGroup">
+                            <label for="description">Receptbeskrivning</label>
+                            <textarea id="description" name="description" style="height:200px"></textarea>
+                        </div>
+                        <div class="formGroup">
+                            <button type="button" class="button" onclick="showMessage()">Spara recept</button>
+                        </div>
+                    </form>
+                    <div id="message" class="alert success">
+                        <span class="message">Ditt recept har sparats!</span>
                     </div>
-                    <div class="formGroup">
-                        <label for="ingredients">Ingredienser</label>
-                        <textarea id="ingredients" name="ingredients" style="height:100px"></textarea>
-                    </div>
-                    <div class="formGroup">
-                        <label for="description">Receptbeskrivning</label>
-                        <textarea id="description" name="description" style="height:200px"></textarea>
-                    </div>
-                    <div class="formGroup">
-                        <button type="button" class="button" onclick="showMessage()">Spara recept</button>
-                    </div>
-                </form>
-                <div id="message" class="alert success">
-                    <span class="message">Ditt recept har sparats!</span>
                 </div>
-            </div>
-
-        </section>
-
-    </main>
-
-<footer class="footer">
-    <div class="footerLogo">
-        <picture>
-            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
-        </picture>
-        <p>ForkFolio är siten för dig som älskar mat!</p>
+            </section>
+        </main>
     </div>
-    <div class="footerLinks">
-        <a href="index.html" class>Hem</a>
-        <a href="add_recipe.html">Lägg till recept</a>
-    </div>
-</footer>
+
+
+    <footer class="footer">
+        <div class="footerLogo">
+            <picture>
+                <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+            </picture>
+            <p>ForkFolio är siten för dig som älskar mat!</p>
+        </div>
+        <div class="footerLinks">
+            <a href="index.html" class>Hem</a>
+            <a href="add_recipe.html">Lägg till recept</a>
+        </div>
+    </footer>
+</div>
+
 <script>
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
