Issue #36: Fixing recipe pages

--- a/add_recipe.html
+++ b/add_recipe.html
@@ -35,15 +35,15 @@
                 <div class="formContainer">
                     <form>
                         <div class="formGroup">
-                            <label for="title">Rubrik på ditt recept</label>
+                            <label for="title"><h3>Rubrik på ditt recept</h3></label>
                             <input type="text" id="title" name="title">
                         </div>
                         <div class="formGroup">
-                            <label for="ingredients">Ingredienser</label>
+                            <label for="ingredients"><h3>Ingredienser</h3></label>
                             <textarea id="ingredients" name="ingredients" style="height:100px"></textarea>
                         </div>
                         <div class="formGroup">
-                            <label for="description">Receptbeskrivning</label>
+                            <label for="description"><h3>Receptbeskrivning</h3></label>
                             <textarea id="description" name="description" style="height:200px"></textarea>
                         </div>
                         <div class="formGroup">
