--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <a href="recipe.html?recipe=sallad" class="recipeCard">
                         <article>
                             <picture>
-                                <source media="(min-width: 600px)" srcset="images/sallad_270.jpg">
-                                <img src="images/sallad_300.jpg" alt="Sallad">
+                                <source media="(min-width: 600px)" srcset="images/sallad/sallad_270.jpg">
+                                <img src="images/sallad/sallad_300.jpg" alt="Sallad">
                             </picture>
                             <h3>Vegetarisk sallad</h3>
                             <div class="cardFooter">
@@ -60,8 +60,8 @@
                     <a href="recipe.html?recipe=lasagne" class="recipeCard">
                         <article>
                             <picture>
-                                <source media="(min-width: 600px)" srcset="images/lasagne_270.jpg">
-                                <img src="images/lasagne_300.jpg" alt="Lasagne on a plate">
+                                <source media="(min-width: 600px)" srcset="images/lasagne/lasagne_270.jpg">
+                                <img src="images/lasagne/lasagne_300.jpg" alt="Lasagne on a plate">
                             </picture>
                             <h3>Lasagne</h3>
                             <div class="cardFooter">
@@ -75,8 +75,8 @@
                     <a href="recipe.html?recipe=pizza" class="recipeCard">
                         <article>
                             <picture>
-                                <source media="(min-width: 600px)" srcset="images/pizza_270.jpg">
-                                <img src="images/pizza_300.jpg" alt="Pizza">
+                                <source media="(min-width: 600px)" srcset="images/pizza/pizza_270.jpg">
+                                <img src="images/pizza/pizza_300.jpg" alt="Pizza">
                             </picture>
                             <h3 class="cardTitle">Pizza</h3>
                             <div class="cardFooter">
