--- a/summer-cakes.html
+++ b/summer-cakes.html
@@ -79,9 +79,14 @@
 <footer class="footer">
     <div class="footerLogo">
         <picture>
+            <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
             <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
         </picture>
-        <p>ForkFolio är siten för dig som älskar mat!</p>
+        <p>ForkFolio-för dig som älskar mat!</p>
+    </div>
+    <div class="footerLinks">
+        <a href="index.html" class>Hem</a>
+        <a href="add_recipe.html">Lägg till recept</a>
     </div>
     <div class="footerLinks">
         <a href="index.html" class>Hem</a>
