--- a/vegetables.html
+++ b/vegetables.html
@@ -59,10 +59,10 @@
                 Frukter: rabarber, vinbär, nätmelon, körsbär, krusbär, jordgubbar, hallon, blåbär, plommon, päron.
                 Europeiska grönsaker (frilandsodlade): mangold, paprika, melon, nektarin, persika.</p>
             <ol>
-                <li><h3>Grillpannestekt isbergssallad med chorizosås och parmesan</h3></li>
-                <li><h3>Lättkokt isbergssallad med smält smör</h3></li>
-                <li><h3>Sallad med rotsaker och vitkål</h3></li>
-                <li><h3>Rabarberkompott</h3></li>
+                <li><h3 class="inList">Grillpannestekt isbergssallad med chorizosås och parmesan</h3></li>
+                <li><h3 class="inList">Lättkokt isbergssallad med smält smör</h3></li>
+                <li><h3 class="inList">Sallad med rotsaker och vitkål</h3></li>
+                <li><h3 class="inList">Rabarberkompott</h3></li>
             </ol>
             <p>Att äta säsongsmat är inte bara gott utan också bra för miljön. Så njut av dessa hälsosamma grönsaker
                 och frukter när de är i säsong!</p>
@@ -74,9 +74,14 @@
 <footer class="footer">
     <div class="footerLogo">
         <picture>
+            <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
             <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
         </picture>
-        <p>ForkFolio är siten för dig som älskar mat!</p>
+        <p>ForkFolio-för dig som älskar mat!</p>
+    </div>
+    <div class="footerLinks">
+        <a href="index.html" class>Hem</a>
+        <a href="add_recipe.html">Lägg till recept</a>
     </div>
     <div class="footerLinks">
         <a href="index.html" class>Hem</a>
